corrections
tableau
header
correction affichage
boutons du bas du tableau

- reste à faire scrollbar

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body{
 	background-image: url('image/fond.jpg');
-	background-size: 25%
+	background-size: 25%;
 }
 
 *{
@@ -12,6 +12,15 @@ body{
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+
+ /* Style de la div vide pour permettre au header de se placer en haut de page*/
+ .vide-haut-page {
+  width: 100%; /* Largeur de 100% de la largeur parente */
+  height: 100px; /* Hauteur de 200 pixels, ajustez selon vos besoins */
+  margin: 0;
+  padding: 0;
+}
+
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////// BARRE DE NAVIGATION  ///////////////////////////////////////////
@@ -311,6 +320,14 @@ body{
 ///////////////////////////////////////////////// DEBUT  ///////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
 .errormessage{
 	font-size: 30px;
 	margin-top: 25px;
@@ -327,7 +344,7 @@ body{
 
 .card{
 	border-radius: 10px !important;
-	margin-top: 150px;
+	margin-top: 30px;
 	margin-bottom: 60px;
 	box-shadow: 5px 5px 10px rgba(0.1, 0.1, 0.1, 0.1);
 }
@@ -469,6 +486,61 @@ img{
 	color: #000000
 }
 
+/* Style pour le survol de la souris de la combobox */
+.form-card select:hover {
+  border-color: #2c75ff;
+}
+
+/* Style pour le focus de la combobox */
+.form-card select:focus {
+  outline: none;
+  border-color: #2c75ff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.input-group select {
+  padding: 10px;
+  border: 1px solid lightgrey;
+  margin-bottom: 25px;
+  width: 100%;
+  box-sizing: border-box;
+  color: #2C3E50;
+  font-size: 14px;
+  letter-spacing: 1px;
+position:relative;
+height:60px;
+margin-left: 1px;
+margin-right: 1px;
+border-radius:6px;
+padding-left: 25px
+}
+
+/*//////////////////////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////// PAGE ajouter patient, medecin, consultation  /////////////////////
+///////////////////////////////////////////////// FIN  ///////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////TABLEAU D'AFFICHAGE ///////////////////////////////////////////
+///////////////////////////////////////////////// DEBUT  ///////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
+/*////////////////////////////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////////// BOUTONS ///////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+.button-sous-tableau {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .button-ajout{
     color: #ffffff;
     background-color:#2c75ff;;
@@ -477,6 +549,7 @@ img{
     cursor:pointer;
     margin-right: 5px;
     border-radius: 10px;
+    font-size: 15px;
 }
 
 .button-ajout:hover{
@@ -489,6 +562,7 @@ img{
 a {
 	text-decoration: none !important; 
 	color: white !important;
+  font-size: 15px;
  }
 
  /* Style pour les liens désactivés */
@@ -514,50 +588,6 @@ a[disabled] {
     border-radius: 10px;
     box-shadow: 0px 1px 1px #414141cc;
 }
-
-
-.input-group select {
-    padding: 10px;
-    border: 1px solid lightgrey;
-    margin-bottom: 25px;
-    width: 100%;
-    box-sizing: border-box;
-    color: #2C3E50;
-    font-size: 14px;
-    letter-spacing: 1px;
-	position:relative;
-	height:60px;
-	margin-left: 1px;
-	margin-right: 1px;
-	border-radius:6px;
-	padding-left: 25px
-}
-
-/* Style pour le survol de la souris de la combobox */
-.form-card select:hover {
-    border-color: #2c75ff;
-}
-
-/* Style pour le focus de la combobox */
-.form-card select:focus {
-    outline: none;
-    border-color: #2c75ff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-
-
-        
-
-/*//////////////////////////////////////////////////////////////////////////////////////////////////////////
-///////////////////////////////////////// PAGE ajouter patient, medecin, consultation  //////////////////////////////////////////////////
-///////////////////////////////////////////////// FIN  ///////////////////////////////////////////////////
-//////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-
-/*////////////////////////////////////////////////////////////////////////////////////////////////////////
-/////////////////////////////////////////TABLEAU D'AFFICHAGE ///////////////////////////////////////////
-///////////////////////////////////////////////// DEBUT  ///////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-
 
 
 
